--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,21 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board{
+  border: 2px solid black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.canvas-container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+  
+.color-palette {
+  display: flex;
 }
 
-.App-link {
-  color: #61dafb;
+.color-block{
+  height: 40px;
+  width: 40px;
+  border: 1px solid black;
 }
 
 @keyframes App-logo-spin {
