--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 .color-block {
   height: 36px;
   width: 36px;
-  margin: 2px 0px;
+  margin: 4px;
   border-radius: 50%;
   border: 1px solid grey;
 }
@@ -42,8 +42,10 @@
 }
 
 .brush-container {
-  display: inline-flex;
-  position: relative;
+  position: absolute;
+  left: 65px;
+  top: 10px;
+  z-index: 2;
 }
 .circle-container {
   visibility: hidden;
